--- a/spring-boot-wechatmp-demo/pom.xml
+++ b/spring-boot-wechatmp-demo/pom.xml
@@ -30,7 +30,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.mvnsearch.wechat</groupId>
+            <artifactId>spring-boot-starter-wechatmp</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
