--- a/spring-boot-starter-wechatmp/pom.xml
+++ b/spring-boot-starter-wechatmp/pom.xml
@@ -51,5 +51,16 @@
         </dependencies>
     </dependencyManagement>
 
-
+    <distributionManagement>
+        <repository>
+            <id>mvnsearch_nexus</id>
+            <name>mvnsearch nexus Releases</name>
+            <url>http://nexus.mvnsearch.org/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>mvnsearch_nexus</id>
+            <name>mvnsearch nexus Snapshots</name>
+            <url>http://nexus.mvnsearch.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
