--- a/spring-boot-starter-wechatmp/pom.xml
+++ b/spring-boot-starter-wechatmp/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <spring-boot.version>1.3.3.RELEASE</spring-boot.version>
+        <spring-boot.version>1.4.0.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -28,9 +28,9 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>me.chanjar</groupId>
-            <artifactId>weixin-java-mp</artifactId>
-            <version>1.3.3</version>
+          <groupId>com.github.binarywang</groupId>
+          <artifactId>weixin-java-mp</artifactId>
+          <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
